# univ

./: README.md
8puzzle/: AUTHORS  Makefile.am  TODO  bootstrap  common.h  configure.ac  dqueue.c  dqueue.h  hash.c  hash.h  heap.c  heap.h  heuristic.c  heuristic.h  iofunc.c  iofunc.h  main.c  map.c  map.h  pgenerator.c  pgenerator.h  puzzle  sfunc.c  sfunc.h  wfunc.c  wfunc.h
8puzzle/.deps/: bqueue.Po  dqueue.Po  hash.Po  heap.Po  heuristic.Po  iofunc.Po  main.Po  map.Po  pgenerator.Po  sfunc.Po  wfunc.Po
EmuARC/: .cproject  .project
NNSec/: TODO  compile.sh  makeparser.sh  start.sh
NNSec/net/: sign.net  (+5 more)
QSapecNG-slide/: main.tex  slide.tex
briscolao/: build.xml
combinatorix/: AUTHORS  configure.ac  doxygen.conf
combinatorix/src/: Makefile.am  combinatorix.c  common.h  error.c  list.c  list.h  multiset.c  multiset.h  set.c  set.h  xmemrep.c
combinatorix/src/.deps/: combinatorix.Po  error.Po  list.Po  multiset.Po  set.Po  set_func.Po  xmemrep.Po
hope-k/: AUTHORS  configure.ac
hope-k/doc/: images.tex  intro.tex  intro.toc  slides.tex
hope-k/doc/johnny/: images.tex  intro.tex  intro.toc  slides.tex
hope-k/src/: Makefile.am  common.h  error.c  graph.c  graph.h  graph_function.c  graph_function.h  hope-k.c  kernel.c  kernel.h  list.c  list.h  parser.c  parser.h  path_array.c  path_array.h  xmemrep.c
hope-k/src/.deps/: dl_list.Po  error.Po  gjskernel.Po  graph.Po  graph_function.Po  hope-k.Po  kernel.Po  lexer.Po  list.Po  parser.Po  path_array.Po  xmemrep.Po
ngame/: main.c  ngame.c  ngame.h
tesi/: biblio.bib.backup  biblio.bib~  classicthesis-ldpkg.sty  qsapecng.kilepr  tesi.aux  tesi.out  tesi.tex  tesi.tex.backup  tesi.tex~  tesi.toc  thanks.tex  thanks.tex.backup  thanks.tex~  title.tex  title.tex.backup  title.tex~
(+336 files in other folders)
