# AM_CFLAGS = -Wall -O2
AM_CFLAGS = -Wall -Wextra -g -O0
# to be commented
bin_PROGRAMS = hope-k
hope_k_SOURCES = common.h error.c graph.h graph.c list.h list.c \
                       xmemrep.c hope-k.c parser.h parser.c kernel.h \
                       kernel.c graph_function.h graph_function.c \
                       path_array.h path_array.c
